Arquillian tests for Openstack API